# limelight-linux-elgato-lights-controller

./: .gitignore  LICENSE  README.md  icon-naming-requirments.txt
.github/workflows/: ci.yml
docs/: API.md  DEVELOPMENT.md
flatpak/: io.github.chimi6.limelight-linux-elgato-lights-controller.desktop  io.github.chimi6.limelight-linux-elgato-lights-controller.local.yml  io.github.chimi6.limelight-linux-elgato-lights-controller.metainfo.xml  io.github.chimi6.limelight-linux-elgato-lights-controller.yml  io.github.limebottle.LimeLight.desktop  io.github.limebottle.LimeLight.metainfo.xml  io.github.limebottle.LimeLight.yml  io.github.limebottle.SubLime.desktop  io.github.limebottle.SubLime.metainfo.xml  io.github.limebottle.SubLime.yml
helper/: Cargo.toml
helper/crates/keylight-gui/: Cargo.toml
helper/crates/keylight-gui/src/: api.rs  main.rs  update_queue.rs
helper/crates/keylight-gui/ui/: main.slint
helper/crates/keylight-tray/: Cargo.toml
helper/crates/keylight-tray/src/: main.rs
helper/crates/keylightd/: Cargo.toml
helper/crates/keylightd/src/: main.rs
