[package]
name = "keylight-tray"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"
egui = "0.30.0"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
urlencoding = "2.1.3"
image = "0.25.9"
resvg = "0.44"
tiny-skia = "0.11"
dirs = "6"